--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -32,10 +32,8 @@
 				<ul id="sidebar-menu2" class="collapse">
 					<li><a data-ui-sref="app.energy-hvac-point-manage">관제점보기</a></li>
 					<li><a data-ui-sref="app.hvac-monitor">상태감시</a></li>
-					<li><a data-ui-sref="app.hvac-graph-manage">경향그래프 설정</a></li>
-					<li><a data-ui-sref="app.hvac-graph-view">경향그래프 보기</a></li>
-					<li><a data-ui-sref="app.hvac-alarm">알람이력 설정</a></li>
-					<li><a data-ui-sref="app.hvac-history">알람이력 보기</a></li>
+					<li><a data-ui-sref="app.hvac-graph-manage">경향그래프</a></li>
+					<li><a data-ui-sref="app.hvac-history">알람 및 이력 보기</a></li>
 					
 					
 				</ul>
@@ -48,10 +46,8 @@
 				<ul id="sidebar-menu3" class="collapse">
 					<li><a data-ui-sref="app.energy-electric-point-manage">관제점보기</a></li>
 					<li><a data-ui-sref="app.electric-monitor">상태감시</a></li>
-					<li><a data-ui-sref="app.electric-graph-manage">경향그래프 설정</a></li>
-					<li><a data-ui-sref="app.electric-graph-view">경향그래프 보기</a></li>
-					<li><a data-ui-sref="app.electric-alarm">알람이력 설정</a></li>
-					<li><a data-ui-sref="app.electric-history">알람이력 보기</a></li>
+					<li><a data-ui-sref="app.electric-graph-manage">경향그래프</a></li>
+					<li><a data-ui-sref="app.electric-history">알람 및 이력 보기</a></li>
 				</ul>
 			</li>
 		</ul>
@@ -75,7 +71,7 @@
 				</a>
 				<ul id="sidebar-menu5" class="collapse">
 					<!-- <li><a data-ui-sref="app.fire-alarm">알람이력 설정</a></li> -->
-					<li><a data-ui-sref="app.fire-history">알람이력 보기</a></li>
+					<li><a data-ui-sref="app.fire-history">알람 및 이력 보기</a></li>
 				</ul>
 			</li>
 		</ul>
@@ -101,7 +97,7 @@
 					<li><a data-ui-sref="app.ev-point-manage">관제점보기</a></li>
 					<li><a data-ui-sref="app.ev-monitor">상태감시</a></li>
 					<!-- <li><a data-ui-sref="app.ev-alarm">알람이력 설정</a></li> -->
-					<li><a data-ui-sref="app.ev-history">알람이력 보기</a></li>
+					<li><a data-ui-sref="app.ev-history">알람 및 이력 보기</a></li>
 				</ul>
 			</li>
 		</ul>
