--- a/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
+++ b/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
@@ -84,8 +84,8 @@
 					<tr>
 					<tr>
 						<th class="text-center" ng-class="getSortClass('id')" ng-click="sortAction('id')">변경 시간</th>
-						<th class="text-center" ng-class="getSortClass('value')" ng-click="sortAction('value')">태그 값</th>
-						<th class="text-center" >알람 내역</th>
+						<th class="text-center" ng-class="getSortClass('value')" ng-click="sortAction('value')">값</th>
+						<th class="text-center" >알람 내역 (알람조건)</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -111,8 +111,8 @@
 					<tr>
 					<tr>
 						<th class="text-center">변경 시간</th>
-						<th class="text-center">태그 값</th>
-						<th class="text-center">알람 내역</th>
+						<th class="text-center">값</th>
+						<th class="text-center">알람 내역 (알람조건)</th>
 					</tr>
 				</thead>
 				<tbody>
