--- a/src/main/resources/static/appPasteur/modules/dashboard/dashboard.html
+++ b/src/main/resources/static/appPasteur/modules/dashboard/dashboard.html
@@ -28,7 +28,7 @@
 				<thead>
 					<tr>
 					<tr>
-						<th class="text-center" ng-class="getSortClass('no')" ng-click="sortAction('no')">No</th>					
+						<!-- <th class="text-center" ng-class="getSortClass('no')" ng-click="sortAction('no')">No</th> -->					
 						<th class="text-center" ng-class="getSortClass('tagID')" ng-click="sortAction('tagID')">태그 아이디</th>
 						<th class="hidden-xs text-center" ng-class="getSortClass('name')" ng-click="sortAction('name')">태그 이름</th>
 					</tr>
@@ -36,9 +36,9 @@
 				<tbody>
 					<tr ng-repeat="point in dataList | filter:searchText | orderBy:sortAttr:sortOder">
 					<!-- <tr ng-repeat="point in dataList | filter:searchText"> -->
-						<td class="text-center">{{point.no}}</td>		
+						<!-- <td class="text-center">{{point.no}}</td> -->		
 						<!-- <td class="text-center"><a href="#/app/energy-hvac-point-manage">{{point.tagID}}</a></td> -->
-						<td class="text-center">{{point.tagID}}</td>
+						<td class="text-center">{{point.id}}</td>
 						<td class="text-center">{{point.name}}</td>
 					</tr>
 				</tbody>
