--- a/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-list.html
@@ -51,7 +51,7 @@
 						total-items="page.totalElements" current-page="page.number">
 							
 						<td class="text-center">{{point.no}}</td>
-						<td class="text-center">{{point.subject}}</td>
+						<td class="text-center"><a ng-click="viewAction(point)">{{point.subject}}</a></td>
 						<td class="text-center">{{getPointNames(point.tagIDs)}}</td>
 						<td class="text-center">{{point.interval}}</td>
 						<td class="hidden-xs text-center">{{getPointDate(point.dateType, point.dateTime)}}</td>
