--- a/src/main/resources/static/appPasteur/modules/others/lighting/point-manage/point-manage-edit.html
+++ b/src/main/resources/static/appPasteur/modules/others/lighting/point-manage/point-manage-edit.html
@@ -19,7 +19,33 @@
 							<div class="col-sm-9">
 								<input type="text" id="name" name="name" class="form-control" ng-model="currentData.name">
 							</div>
-						</div>				
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3" for="interval"><strong>저장주기</strong></label>
+							<div class="col-sm-9">
+								<div class="pull-left">
+									<input type="number" id="interval" name="interval" class="form-control" 
+									ng-model="currentData.interval" 
+									string-to-number
+									min="0"
+									style="width:100px" disabled="disabled">
+								</div>
+								<div class="pull-left padding_top_10 margin_left_10"> ms</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<label class="control-label col-sm-3" for="criteria"><strong>알람조건식</strong></label>
+							<div class="col-sm-9">
+								<input type="text" id="criteria" name="criteria" class="form-control" ng-model="currentData.criteria" disabled="disabled">
+							</div>
+						</div>
+						
+						<div class="form-group">
+							<label class="control-label col-sm-3" for="name"></label>
+							<div class="col-sm-9">
+								<pre><code>알람조건식 예시<br>1) value == "Active"<br>2) value > 570</code></pre>
+							</div>
+						</div>						
 					</fieldset>
 					
 					<div class="form-actions">
