--- a/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
+++ b/src/main/resources/static/appPasteur/modules/emergency/fire/alarm-history/alarm-history.html
@@ -32,7 +32,7 @@
 					</select>
 					<ul ng-show="searchNo_error" class="parsley-errors-list filled"><li class="parsley-required">필수 입력사항입니다.</li></ul>
 					 -->
-					<h5>화재정보 수신[화재정보]</h5>
+					<h5>화재정보 수신</h5>
 				</div>
 				<div class="pull-left">
 					<h5 class="fw-bold">기간</h5>
