--- a/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/graph-manage/graph-manage-list.html
@@ -7,15 +7,17 @@
 				<div class="pull-left form-group">
 					<div class="pull-left">
 					<h5 class="fw-bold">관제점</h5>
-				</div>	
+				</div>
 				<div class="pull-left margin_left_20">
-					<input type="search" 
-						id="searchName" 
-						ng-model="searchName" 
-						class="form-control" 
-						style="width:250px"
-						placeholder="  관제점 검색어를 입력하세요."> 
-					<!-- <code>searchName : {{searchName}}</code> -->
+					 <input type="search" 
+							 name="searchName"
+							 id="searchName"
+							 ng-model="searchName" 
+							 typeahead="point for point in pointInfo | filter:$viewValue" 
+							 class="form-control"
+							 style="width:250px"
+							 placeholder="  관제점 검색어를 입력하세요."
+							 autocomplete="off">
 				</div>
 				<span class="input-group-btn pull-left">
 					<button type="submit" class="btn btn-default">Search</button>
@@ -36,12 +38,12 @@
 				<thead>
 					<tr>
 					<tr>
-						<th class="text-center">SEQ</th>
-						<th class="text-center">그래프 제목</th>
-						<th class="text-center">관제점</th>
+						<th class="text-center" ng-class="getSortClass('id')" ng-click="sortAction('id')">SEQ</th>
+						<th class="text-center" ng-class="getSortClass('subject')" ng-click="sortAction('subject')">그래프 제목</th>
+						<th class="text-center" ng-class="getSortClass('tagIDs')" ng-click="sortAction('tagIDs')">관제점</th>
 						<th class="hidden-xs text-center">인터벌 기준</th>
 						<th class="hidden-xs text-center">날짜 기준</th>
-						<th class="hidden-xs text-center">Value 옵션</th>
+						<th class="hidden-xs text-center">옵션</th>
 						<th class="hidden-xs text-center">편집</th>
 					</tr>
 
@@ -103,7 +105,7 @@
 						<th class="text-center">관제점</th>
 						<th class="hidden-xs text-center">인터벌 기준</th>
 						<th class="hidden-xs text-center">날짜 기준</th>
-						<th class="hidden-xs text-center">Value 옵션</th>
+						<th class="hidden-xs text-center">옵션</th>
 						<th class="hidden-xs text-center">편집</th>
 					</tr>
 
