--- a/src/main/resources/static/appPasteur/modules/energy/analysis/report/report.html
+++ b/src/main/resources/static/appPasteur/modules/energy/analysis/report/report.html
@@ -36,3 +36,21 @@
 	</section>
 </div>
 </div>
+
+<script type="text/ng-template" id="report-confirm-content.html">
+	<div class="modal-header">
+		<h4 class="modal-title text-align-center fw-bold mt" id="myModalLabel18">작성 오류</h4>
+	</div>
+	<div class="modal-body">	
+		<div class="row">
+			<div class="col-md-12">
+			<p class="text-align-center fs-mini text-muted mt-sm">
+			현재 날짜만 작성 가능합니다.
+			</p>
+			</div>
+		</div>
+	</div>
+	<div class="modal-footer">
+		<button type="button" class="btn btn-default btn-inverse" data-ng-click="cancel()">확인</button>
+	</div>
+</script>
