--- a/src/main/resources/static/appPasteur/modules/emergency/cctv/point-manage/point-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/emergency/cctv/point-manage/point-manage-list.html
@@ -17,6 +17,11 @@
 				<span class="input-group-btn">
                   <button type="submit" class="btn btn-default">Search</button>
                 </span>
+                
+                <div class="pull-right margin_right_20">
+					<span class="btn btn-primary btn-rounded pull-right" ng-click="excelDownAction()">엑셀다운로드</span>
+				</div>
+				
                 <!-- 
                 <code>searchText : {{searchText}}</code>
                  -->
