--- a/src/main/resources/static/appPasteur/modules/others/elevator/point-manage/point-manage-edit.html
+++ b/src/main/resources/static/appPasteur/modules/others/elevator/point-manage/point-manage-edit.html
@@ -43,7 +43,7 @@
 						<div class="form-group">
 							<label class="control-label col-sm-3" for="name"></label>
 							<div class="col-sm-9">
-								<pre><code>알람조건식 예시<br>1) value == "Active"<br>2) value > 570</code></pre>
+								<pre><code>알람조건식 예시<br>1) value == "Active"<br>2) value > 570<br>3) value > 100 && value < 200</code></pre>
 							</div>
 						</div>						
 					</fieldset>
