--- a/src/main/resources/static/appPasteur/modules/energy/analysis/report/report-view.html
+++ b/src/main/resources/static/appPasteur/modules/energy/analysis/report/report-view.html
@@ -522,5 +522,5 @@
 
 <div class="form-actions">
 	<span class="btn btn-primary btn-rounded pull-right margin_left_20" ng-click="editAction(reportEntity)">Edit</span>
-	<span class="btn btn-primary btn-rounded">Excel Downlod</span>
+	<span class="btn btn-primary btn-rounded" ng-click="downAction(reportEntity.daily)">Excel Downlod</span>
 </div>
