--- a/src/main/resources/static/appPasteur/modules/energy/electric/point-manage/point-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/electric/point-manage/point-manage-list.html
@@ -23,11 +23,10 @@
 				<span class="input-group-btn pull-left">
                   <button type="submit" class="btn btn-default">Search</button>
                 </span>
-                
+                <!-- 
                 <div class="pull-right">
 					<span class="btn btn-primary btn-rounded pull-right" ng-click="excelDownAction()">엑셀다운로드</span>
 				</div>
-				<!-- 
                 <div class="pull-right col-sm-4">
 					<div class="fileinput fileinput-new input-group" data-ui-jq="fileinput" data-ui-options="{'name': 'jasnyf1'}">
 						<div class="form-control" data-trigger="fileinput">
@@ -46,7 +45,6 @@
 					<h5 class="fw-bold">엑셀업로드</h5>
 				</div>
 				 -->
-				
                 <!-- 
                 <code>searchText : {{searchText}}</code>
                  -->
@@ -61,7 +59,7 @@
 					<tr>										
 						<th class="text-center" ng-class="getSortClass('id')" ng-click="sortAction('id')">아이디</th>
 						<th class="text-center" ng-class="getSortClass('name')" ng-click="sortAction('name')">관제점</th>
-						<th class="hidden-xs text-center" style="width: 350px;">통신 상태 (시간 <span class="custom-point-value">현재값</span>)</th>
+						<th class="hidden-xs text-center" style="width: 280px;">통신 상태 (시간 <span class="custom-point-value">현재값</span>)</th>
 						<th class="hidden-xs text-center" style="width: 180px;" ng-class="getSortClass('interval')" ng-click="sortAction('interval')">유형</th>
 					</tr>
 				</thead>
@@ -73,13 +71,9 @@
 						<td class="hidden-xs text-center">
 							<div class="pull-left text-center padding_left_10">{{getDateTime(point.datetime)}}</div>
 							<div class="pull-left text-center padding_left_10"><span class="custom-point-value">{{point.value}}</span></div>
-							 <div class="pull-right text-center padding_right_10">
-								 <button
-									class="btn btn-xs btn-primary"
-									ng-click="updateValue(point.id, $index)">Refresh</button>
-							</div>
+							<div class="pull-left text-center padding_left_10"><a ng-click="updateValue(point.id, $index)"><i class="fa fa-refresh"></i></a></div>
 						</td>
-						<td class="hidden-xs"><div class="padding_left_10" ng-bind-html="point.dataType"></div></td>	
+						<td class="hidden-xs text-center"><div class="padding_left_10" ng-bind-html="point.dataType"></div></td>	
 					</tr>
 				</tbody>		
 			</table>
