project_pasteur 2016-02-25 / 03 서버적용

--- a/src/main/resources/static/appPasteur/modules/energy/analysis/report/report-edit.html
+++ b/src/main/resources/static/appPasteur/modules/energy/analysis/report/report-edit.html
@@ -576,6 +576,6 @@
 <div class="form-actions">
 	<button type="submit" class="btn btn-primary btn-rounded pull-right">Save</button>
 	<span class="btn btn-default btn-inverse" ng-show="reportEntity.no > 0" ng-click="viewAction(reportEntity)">Cancel</span>
-	<span class="btn btn-default btn-inverse" ng-show="reportEntity.no == undefined" ng-click="cancelAction()">Cancel</span>
+	<span ng-show="reportEntity.no == undefined">&nbsp;</span>
 </div>
 </form>
