project_pasteur 2016-02-25 / 05 서버적용

--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -2,7 +2,7 @@
 	<!-- need this .js class to initiate slimscroll -->
 	<div class="js-sidebar-content">
 		<header class="logo hidden-xs">
-	      <a href="#/app/pasteur-dashboard" class="ng-binding">파스퇴르</a>
+	      <a href="#/app/pasteur-dashboard" class="ng-binding">Home</a>
 	    </header>
 	    
 		<ul class="sidebar-nav margin_top_50">
