--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -34,8 +34,7 @@
 					<li><a data-ui-sref="app.hvac-monitor">상태감시</a></li>
 					<li><a data-ui-sref="app.hvac-graph-manage">경향그래프</a></li>
 					<li><a data-ui-sref="app.hvac-history">알람 및 이력 보기</a></li>
-					
-					
+					<!-- <li><a data-ui-sref="app.hvac-graph-view">그래프테스트</a></li> -->
 				</ul>
 			</li>
 			<li>
