--- a/src/main/resources/static/appPasteur/modules/energy/hvac/graph-view/graph-view.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/graph-view/graph-view.html
@@ -1,11 +1,8 @@
-<div ng-init="prepareAction()"></div>
-<span us-spinner="{radius:30, width:8, length: 16}" spinner-key="app-spinner-hg" spinner-start-active="true"></span>
-
 <div class="row">
 <div class="col-md-12">
 	<section class="widget">
 		<div class="widget-body">
-		
+		<!-- 
 			<form name="searchNameForm"					
 					data-ui-jq="parsley" 
 					data-parsley-priority-enabled="ture"
@@ -40,46 +37,13 @@
 			<div ng-show="chartEnable" class="margin_top_30">
 				<nvd3 options="chartOptions" data="chartData" config="{refreshDataOnly: false}" api="api" objectequality="true"></nvd3>
 			</div>
-		
+		 -->
+		 
+		    <button ng-click="run=!run">Start / Stop</button>
+    
+    <nvd3 options="options" data="data" api="nvd3Api" config="{refreshDataOnly: false}" objectequality="true"></nvd3>
+   <button ng-click="fresh()">fresh</button>
 		</div>
 	</section>
 </div>
-</div>
-
-<div class="row">
-	<div class="col-md-12">
-		<div class="clearfix">
-			<ul id="tabs1" class="nav nav-tabs pull-left" >
-				<li ng-repeat="logEntity in logList.values()" id="li_{{logEntity.tagID}}" class="{{chageLogSectionClass($first, 'li_'+logEntity.tagID)}}">
-				<a data-target="#{{logEntity.tagID}}" data-toggle="tab">{{logEntity.tagName}}</a>
-				</li>	
-			</ul>
-		</div>
-		<div id="tabs1c" class="tab-content mb-lg">
-			<div class="tab-pane clearfix {{chageLogSectionClass($first, 'li_'+logEntity.tagID)}}" id="{{logEntity.tagID}}" ng-repeat="logEntity in logList.values()">
-				<div>
-					<span>총 {{logEntity.page.totalElements}}개의 이력이 있습니다.</span>
-					<table class="table table-hover table-lg mt-lg mb-0">
-						<thead>
-							<tr>
-							<tr>
-								<th class="text-center" ng-class="getSortClass('id',logEntity.tagID)" ng-click="sortAction('id',logEntity.tagID)">변경 시간</th>
-								<th class="text-center" ng-class="getSortClass('value',logEntity.tagID)" ng-click="sortAction('value',logEntity.tagID)">태그 값</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr dir-paginate="point in logEntity.content | itemsPerPage: logEntity.page.size" pagination-id="logEntity.tagID"
-								total-items="logEntity.page.totalElements" current-page="logEntity.page.number">
-								<td class="hidden-xs text-center">{{point.datetime | date:'yyyy-MM-dd HH:mm:ss'}}</td>
-								<td class="text-center">{{point.value}} </td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="clearfix text-center">
-					<dir-pagination-controls pagination-id="logEntity.tagID" on-page-change="pageChangeHandler(newPageNumber,logEntity.tagID)"></dir-pagination-controls>
-				</div>
-			</div>
-		</div>
-	</div>
 </div>
