--- a/src/main/resources/static/appPasteur/modules/energy/hvac/point-manage/point-manage-list.html
+++ b/src/main/resources/static/appPasteur/modules/energy/hvac/point-manage/point-manage-list.html
@@ -6,7 +6,7 @@
 			<div class="clearfix form-group">
 				<div class="pull-left">
 					<h5 class="fw-bold">아이디 또는 관제점</h5>
-				</div>			
+				</div>
 				
 				<div class="pull-left margin_left_20">
 					 <input type="search" 
@@ -23,6 +23,14 @@
 				<span class="input-group-btn pull-left">
                   <button type="submit" class="btn btn-default">Search</button>
                 </span>
+                <!-- 
+                <br />
+                <br />
+                <br />
+                <live-search id="search1" type="text"
+          		live-search-callback="mySearchCallback" style="width:300px;"
+          		ng-model="searchName" class="form-control" autocomplete="off"></live-search>
+           		-->
                 <!-- 
                 <div class="pull-right">
 					<span class="btn btn-primary btn-rounded pull-right" ng-click="excelDownAction()">엑셀다운로드</span>
