--- a/src/main/resources/static/index_appPasteur.html
+++ b/src/main/resources/static/index_appPasteur.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="scripts/angucomplete-alt-master/angucomplete-alt.css">	
 	<link rel="stylesheet" href="scripts/ui-select-master/dist/select.min.css">
 	<link rel="stylesheet" href="scripts/messenger/build/css/messenger-theme-future.css">
+	<link rel="stylesheet" href="scripts/angular-livesearch-master/liveSearch.css">
 	<link rel="stylesheet" href="styles/custom.css">
 	
 </head>
@@ -121,6 +122,7 @@
 	<script type="text/javascript" src="scripts/angular-spinner-master/angular-spinner.min.js"></script>
 	<script type="text/javascript" src="scripts/angular-loading-spinner-master/angular-loading-spinner.js"></script>
 	<script type="text/javascript" src="scripts/hashmap-master/hashmap.js"></script>
+	<script type="text/javascript" src="scripts/angular-livesearch-master/liveSearch.js"></script>
 	<!-- <script type="text/javascript" src="scripts/ui-select-master/dist/select.min.js"></script> -->
 	
  
