project_pasteur 2016-03-02 / 01 서버적용

--- a/src/main/resources/static/appPasteur/modules/dashboard/dashboard.html
+++ b/src/main/resources/static/appPasteur/modules/dashboard/dashboard.html
@@ -29,8 +29,8 @@
 					<tr>
 					<tr>
 						<!-- <th class="text-center" ng-class="getSortClass('no')" ng-click="sortAction('no')">No</th> -->					
-						<th class="text-center" ng-class="getSortClass('tagID')" ng-click="sortAction('tagID')">태그 아이디</th>
-						<th class="hidden-xs text-center" ng-class="getSortClass('name')" ng-click="sortAction('name')">태그 이름</th>
+						<th class="text-center" ng-class="getSortClass('tagID')" ng-click="sortAction('tagID')">아이디</th>
+						<th class="hidden-xs text-center" ng-class="getSortClass('name')" ng-click="sortAction('name')">관제점</th>
 					</tr>
 				</thead>
 				<tbody>
