--- a/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
+++ b/src/main/resources/static/appPasteur/modules/core/navigation/sidebar.html
@@ -16,7 +16,7 @@
 		<ul class="sidebar-nav">
 			<li>
 				<a data-ui-sref="app.components-reset"> 
-					<span class="icon"> <i class="glyphicon glyphicon-pencil"></i></span> 관제점 리셋
+					<span class="icon"> <i class="glyphicon glyphicon-pencil"></i></span> 테스트페이지
 				</a>
 			</li>
 		</ul>
@@ -69,7 +69,7 @@
 					<i class="toggle fa fa-angle-down"></i>
 				</a>
 				<ul id="sidebar-menu5" class="collapse">
-					<!-- <li><a data-ui-sref="app.fire-alarm">알람이력 설정</a></li> -->
+					<!-- <li><a data-ui-sref="app.fire-point-manage">관제점보기</a></li> -->
 					<li><a data-ui-sref="app.fire-history">알람 및 이력 보기</a></li>
 				</ul>
 			</li>
