--- a/src/main/resources/static/index_appPasteur.html
+++ b/src/main/resources/static/index_appPasteur.html
@@ -122,9 +122,8 @@
 	<script type="text/javascript" src="scripts/angular-spinner-master/angular-spinner.min.js"></script>
 	<script type="text/javascript" src="scripts/angular-loading-spinner-master/angular-loading-spinner.js"></script>
 	<script type="text/javascript" src="scripts/hashmap-master/hashmap.js"></script>
-	<script type="text/javascript" src="scripts/angular-livesearch-master/liveSearch.js"></script>
-	<!-- <script type="text/javascript" src="scripts/ui-select-master/dist/select.min.js"></script> -->
-	
+	<script type="text/javascript" src="scripts/angular-translate-2.9.0.1/angular-translate.min.js"></script>
+	<script type="text/javascript" src="scripts/angular-dynamic-locale-master/dist/tmhDynamicLocale.min.js"></script>
  
 	<!-- DEV 1 -->
 	<script type="text/javascript" src="appPasteur/modules/core/core.module.js"></script>
